Fixed spacing

--- a/src/pages/Artist/components/Music/Music.scss
+++ b/src/pages/Artist/components/Music/Music.scss
@@ -369,7 +369,7 @@
       }
       .notes-container {
         display: inline-block;
-        margin-left: 4%;
+        margin-left: 8%;
         width: 23px;
         img {
           width: 18px;
